# checkers

./: Cargo.toml  LICENSE  README.md
src/: ai.rs  alphabeta.rs  animation_3d.rs  checkers_events.rs  config.rs  input_3d.rs  logic.rs  main.rs  menu.rs  render_3d.rs  rendering_3d.rs  sound.rs  state.rs
src/search/: mod.rs
