[package]
name = "checkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9.1", features = ["mp3"]}
bevy_mod_debugdump = "0.6.0"
bevy_mod_picking = "0.11.0"
futures-lite = "1.12.0"
